--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ subprojects {
         // End: Spring Boot Actuator
 
         //Start: Pact
-        testCompile 'au.com.dius:pact-jvm-consumer-junit_2.11:2.1.13'
+	testCompile 'au.com.dius:pact-jvm-consumer-junit_2.11:3.5.0-beta.2'
         //End: Pact
 
 
