[victoryw] include the check style of sun code style

--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,15 @@ allprojects {
 
     apply plugin: 'eclipse'
     apply plugin: 'idea'
+    apply plugin: 'checkstyle'
 
     task wrapper(type: Wrapper) {
         gradleVersion = '2.12'
+    }
+
+    checkstyle {
+    	configFile = rootProject.file('checkstyle.xml')
+      toolVersion ="7.3" 
     }
 }
 
