--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,9 @@ language: java
 jdk:
   - oraclejdk8
 
-script:  gradle test
+script:
+  - gradle test
+  - gradle codeCoverageReport
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
