[victoryw] #n/a add the consumer contract and should consider the host name and use the actually client

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 ### Gradle ###
 .gradle
-*/build/
+*/build/**/*
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -102,3 +102,6 @@ modules.xml
 
 ### Jacoco ###
 build/
+
+##Pact##
+consumer/target/
