--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,8 @@ subprojects {
         testCompile 'junit:junit:4.12'
 
         // End: JUnit
+        
+        testCompile 'au.com.dius:pact-jvm-consumer-junit_2.11:3.5.0-beta.2'
     }
 }
 
