--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,11 @@ subprojects {
         compile 'org.springframework.boot:spring-boot-starter-actuator'
         // End: Spring Boot Actuator
 
+        //Start: Spring data jpa and H2 memory db
+        compile("org.springframework.boot:spring-boot-starter-data-jpa")
+        compile("com.h2database:h2")
+        //End: Spring data jpa and H2 memory db
+
         //Start: Pact
 	    testCompile 'au.com.dius:pact-jvm-consumer-junit_2.11:3.5.0-beta.2'
         testCompile 'au.com.dius:pact-jvm-provider-junit_2.11:3.5.0-beta.2'
