--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,8 @@ subprojects {
 
         //Start: Spring data jpa and H2 memory db
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
-        compile("com.h2database:h2")
+
+        compile 'mysql:mysql-connector-java'
         //End: Spring data jpa and H2 memory db
 
         //Start: Pact
@@ -75,7 +76,7 @@ subprojects {
         //End: Pact
 
         testCompile("org.springframework.boot:spring-boot-starter-test")
-
+        testCompile("com.h2database:h2")
         // Start: JUnit
         testCompile 'junit:junit:4.12'
         // End: JUnit
