--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -1,2 +1,32 @@
 server:
     port: 9000
+spring:
+    profiles:
+      active : development
+---
+spring:
+  profiles: development
+  datasource:
+    url : jdbc:mysql://localhost:3306/db_example
+    username : springuser
+    password : r0ys1ngh4m
+
+  jpa:
+    hibernate:
+      ddl-auto : create
+---
+spring:
+  profiles: test
+
+---
+spring:
+  profiles: prod
+  datasource:
+    url : jdbc:mysql://mysql:3306/db_example
+    username : springuser
+    password : r0ys1ngh4m
+
+  jpa:
+    hibernate:
+      ddl-auto : create
+
