--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ allprojects {
     apply plugin: 'jacoco'
 
     task wrapper(type: Wrapper) {
-        gradleVersion = '2.12'
+        gradleVersion = '3.5'
     }
 
     checkstyle {
@@ -21,6 +21,11 @@ allprojects {
         mavenLocal()
         mavenCentral()
         jcenter()
+    }
+
+    jacoco {
+        // change the version of Jacoco in use
+        toolVersion = '0.7.9'
     }
 
 }
@@ -80,7 +85,38 @@ subprojects {
 
 
     }
+
+    jacoco {
+        reportsDir = file("$buildDir/customJacocoReportDir")
+    }
+
+    test {
+        jacoco {
+            destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+            classDumpDir = file("$buildDir/jacoco/classpathdumps")
+        }
+    }
+
+    jacocoTestReport {
+        reports {
+            xml.enabled false
+            csv.enabled false
+            html.destination "${buildDir}/jacocoHtml"
+        }
+    }
+
+    jacocoTestCoverageVerification {
+        violationRules {
+            rule {
+                limit {
+                    minimum = 0.99
+                }
+            }
+        }
+    }
 }
+
+
 
 project(':consumer') {
     mainClassName = 'org.victoryw.ConsumerMain'
