[victoryw] #n/a add the pitest, and i don't know how to;  add the debug mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,11 @@ services:
   web:
     image: tianyawy/consumer-pact
     container_name: consumer-pact-service
+    environment:
+      - JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8080
     ports:
       - "8082:9000"
+      - "8087:8080"
     depends_on:
       - mysql
 
