--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ buildscript {
 
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.1.11'
     }
 }
 
@@ -52,6 +53,7 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'application'
+    apply plugin: "info.solidsoft.pitest"
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -71,6 +73,8 @@ subprojects {
 
         compile 'mysql:mysql-connector-java'
         //End: Spring data jpa and H2 memory db
+
+        compile 'org.victoryw.idGenerator:IDGenerator:1.2'
 
         //Start: Pact
 	    testCompile 'au.com.dius:pact-jvm-consumer-junit_2.11:3.5.0-beta.2'
