[victoryw] #try to fix the travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ jdk:
   - oraclejdk8
 
 script:
-  - gradle test
-  - gradle codeCoverageReport
+  - ./gradlew build
+  - ./gradlew codeCoverageReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
