[victoryw] #n/a fix the version lost

--- a/build.gradle
+++ b/build.gradle
@@ -77,8 +77,8 @@ subprojects {
         compile 'org.victoryw.idGenerator:IDGenerator:1.2'
 
         //Start: Pact
-	    testCompile 'au.com.dius:pact-jvm-consumer-junit_2.11:3.5.0-beta.2'
-        testCompile 'au.com.dius:pact-jvm-provider-junit_2.11:3.5.0-beta.2'
+	    testCompile 'au.com.dius:pact-jvm-consumer-junit_2.11:3.5.0-rc.3'
+        testCompile 'au.com.dius:pact-jvm-provider-junit_2.11:3.5.0-rc.3'
         //End: Pact
 
         testCompile("org.springframework.boot:spring-boot-starter-test")
